--- a/index.html
+++ b/index.html
@@ -34,6 +34,9 @@
         </div>
       </div><!-- end banner -->
 
+    <iframe width="725" height="453" src="https://www.tinkercad.com/embed/1my0byOfsh4?editbtn=1" frameborder="0" marginwidth="0" marginheight="0" scrolling="no"></iframe>
+    
+    
     <div class="wrapper">
       <nav>
         <ul></ul>
